Bug 165933 - FILESAVE docx saved by Writer is marked as corrupted by MSWord
Summary: FILESAVE docx saved by Writer is marked as corrupted by MSWord
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jaume Pujantell
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords:
Depends on:
Blocks: DOCX-Corrupted
  Show dependency treegraph
 
Reported: 2025-03-27 13:55 UTC by Jaume Pujantell
Modified: 2025-04-09 15:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Failing file (13.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-03-27 13:56 UTC, Jaume Pujantell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jaume Pujantell 2025-03-27 13:55:01 UTC
Description:
This document saved with LibreOffice is seen as corrupt and in need of repair when opened with MSWord.

Steps to Reproduce:
1. Open document in Writer
2. Save again as docx
3. Open in MSWord

Actual Results:
MSWord complains about the document.

Expected Results:
Document should open fine in other editors.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d77ec5087c9e0e2e5804ba31755717d98a7da1ab
CPU threads: 16; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jaume Pujantell 2025-03-27 13:56:15 UTC
Created attachment 200051 [details]
Failing file
Comment 2 Timur 2025-03-27 16:02:01 UTC
Refinement of:

commit 023c265e237ff84dead624ec369976ff2f006ffa	[log]
author	Jaume Pujantell <jaume.pujantell@collabora.com>	Thu Mar 13 15:01:24 2025 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	Thu Mar 13 16:35:00 2025 +0100
tdf#165059 sw use delText inside all del tags


The patch: https://gerrit.libreoffice.org/c/core/+/183403
Comment 3 Commit Notification 2025-03-28 18:40:37 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/80d036c0ddfce7025e0d069f54c65b28031a9f7c

tdf#165933 avoid w:delText inside w:moveFrom

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 sipawa 2025-04-05 09:22:59 UTC Comment hidden (spam)
Comment 5 Commit Notification 2025-04-09 15:45:38 UTC
Jaume Pujantell committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/03126c28f36c9c1b92ccd7a410450a67c9fa0972

tdf#165933 avoid w:delText inside w:moveFrom

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.